--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,4 @@
-# Just a starter template
-
-name: 'Terraform CI'
+name: 'Terraform Format, Init & Validate'
 
 on:
   push:
@@ -12,22 +10,29 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform Format, Init & Validate'
+    name: 'Terraform CI'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
-      - name: Terraform Format
-        run: terraform fmt -check
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Init
-        run: terraform init || echo "Skipping init since no backend configured"
+    - name: Terraform Format
+      run: terraform fmt -check
 
-      - name: Terraform Validate
-        run: terraform validate
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Validate
+      run: terraform validate
 
