Add diff output to terraform lint step

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
+      - name: Show Terraform Diff
+        run: terraform fmt -recursive -diff || true
+
       - name: Terraform Format Check
         run: terraform fmt -check -recursive
 
