Refactor: make terraform.yml reusable and call from deploy-monitoring.yml

--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -1,4 +1,4 @@
-name: 🛠️ Deploy Monitoring Stack
+name: Deploy Monitoring Stack
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
 
 jobs:
   deploy-monitoring:
-    name: ⚙️ Terraform Apply (Monitoring)
+    name: Terraform Apply (Monitoring)
     runs-on: ubuntu-latest
 
     permissions:
