Finalize reusable Terraform workflow with region us-east-2

--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -6,43 +6,12 @@ on:
       - 'monitoring/terraform/**'
     branches:
       - main
-  workflow_dispatch:  # Manual trigger option
-
-env:
-  AWS_REGION: ${{ vars.AWS_REGION }}
-  TF_VAR_region: ${{ vars.AWS_REGION }}
+  workflow_dispatch:
 
 jobs:
   deploy-monitoring:
-    name: Terraform Apply (Monitoring)
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.7
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Init
-        run: terraform -chdir=monitoring/terraform init
-
-      - name: Terraform Plan
-        run: terraform -chdir=monitoring/terraform plan
-
-      - name: Terraform Apply
-        run: terraform -chdir=monitoring/terraform apply -auto-approve
+    uses: ./.github/workflows/terraform.yml
+    with:
+      aws-region: us-east-2
+    secrets: inherit
 
