Update PCA and Spearman preprocessing with S3 support and GitHub Actions integration

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,14 @@
 # Base image: slim to keep it light
 FROM python:3.10-slim
 
-# Set timezone/env if needed
+# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-# Set work directory
+# Set working directory
 WORKDIR /app
 
-# Install OS-level deps if needed (optional for scientific Python)
+# Install OS-level dependencies
 RUN apt-get update && \
     apt-get install -y build-essential gcc libglib2.0-0 libsm6 libxrender1 libxext6 curl && \
     rm -rf /var/lib/apt/lists/*
@@ -17,9 +17,12 @@ RUN apt-get update && \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all source code
-COPY . .
+# Copy the feature engineering scripts into the container
+COPY feature_engineering/ ./feature_engineering/
 
-# Default command
-CMD ["python", "lambda_function.py"]
+# Set the working directory to the script folder
+WORKDIR /app/feature_engineering
+
+# Default command (can be overridden at runtime)
+CMD ["python", "run_pca.py"]
 
