--- a/.github/workflows/run-preprocessing.yml
+++ b/.github/workflows/run-preprocessing.yml
@@ -1,4 +1,4 @@
-name: Run Preprocessing (PCA + Spearman)
+name: Run Preprocessing (QC → PCA → Spearman)
 
 on:
   workflow_dispatch:
@@ -16,9 +16,28 @@ jobs:
       - name: Build Docker image
         run: docker build -t feature-engineering ./docker
 
+  run-qc:
+    name: Run QC Job
+    needs: build-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Run QC container
+        run: |
+          docker run --rm \
+            -e INPUT_PATH="s3://omicflow-data-bucket/expression_matrix.csv" \
+            -e OUTPUT_PATH="qc_filtered_expression.csv" \
+            -e S3_OUTPUT_PATH="s3://omicflow-data-bucket/results/qc_filtered_expression.csv" \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_DEFAULT_REGION="us-east-2" \
+            feature-engineering python run_qc.py
+
   run-pca:
     name: Run PCA Job
-    needs: build-image
+    needs: run-qc
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -27,7 +46,7 @@ jobs:
       - name: Run PCA container
         run: |
           docker run --rm \
-            -e INPUT_PATH="s3://omicflow-data-bucket/expression_matrix.csv" \
+            -e INPUT_PATH="s3://omicflow-data-bucket/results/qc_filtered_expression.csv" \
             -e METADATA_PATH="s3://omicflow-data-bucket/cell_metadata.csv" \
             -e OUTPUT_PATH="pca_results.csv" \
             -e S3_OUTPUT_PATH="s3://omicflow-data-bucket/results/pca_results.csv" \
@@ -38,7 +57,7 @@ jobs:
 
   run-spearman:
     name: Run Spearman Correlation
-    needs: build-image
+    needs: run-qc
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -47,7 +66,7 @@ jobs:
       - name: Run Spearman container
         run: |
           docker run --rm \
-            -e INPUT_PATH="s3://omicflow-data-bucket/expression_matrix.csv" \
+            -e INPUT_PATH="s3://omicflow-data-bucket/results/qc_filtered_expression.csv" \
             -e OUTPUT_PATH="spearman_results.csv" \
             -e S3_OUTPUT_PATH="s3://omicflow-data-bucket/results/spearman_results.csv" \
             -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
