fix: Add missing skip checks and configure Checkov config file
- Add CKV_AWS_356 (IAM wildcards) and CKV_AWS_363 (runtime) to skips
- Point Checkov action to .checkov.yml config

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           directory: .
           framework: terraform
-          soft_fail: false
+          config_file: .checkov.yml
           output_format: cli
