fix: Add soft_fail parameter to Checkov config

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -28,3 +28,4 @@ jobs:
           framework: terraform
           config_file: .checkov.yml
           output_format: cli
+          soft_fail: false
